<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ru.gendalf13666.mycourses.Ui.Home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_classes"
        android:name="ru.gendalf13666.mycourses.Ui.Classes.ClassesFragment"
        android:label="@string/title_classes"
        tools:layout="@layout/fragment_classes" />

    <fragment
        android:id="@+id/navigation_list"
        android:name="ru.gendalf13666.mycourses.Ui.List.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/navigation_favourite"
        android:name="ru.gendalf13666.mycourses.Ui.Favourite.FavouriteFragment"
        android:label="@string/title_favourites"
        tools:layout="@layout/fragment_favourite" />
</navigation>