<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1c1d21"
    tools:context=".Ui.Home.HomeFragment">

    <TextView
        android:id="@+id/classes_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/fragment_home_title_margin_horizontal"
        android:layout_marginVertical="@dimen/margin_default"
        android:text="@string/hi_student"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_home_title_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/search"
        android:layout_width="@dimen/fragment_home_icon_size"
        android:layout_height="@dimen/fragment_home_icon_size"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/margin_default"
        app:layout_constraintEnd_toStartOf="@id/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_search"
        app:tint="@color/white" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/settings"
        android:layout_width="@dimen/fragment_home_icon_size"
        android:layout_height="@dimen/fragment_home_icon_size"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/margin_default"
        android:scaleType="fitXY"
        android:scaleX="@dimen/scale_image"
        android:scaleY="@dimen/scale_image"
        app:layout_constraintEnd_toStartOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_settings" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/fragment_home_icon_size"
        android:layout_height="@dimen/fragment_home_icon_size"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/margin_default"
        android:padding="@dimen/zero"
        android:scaleType="fitXY"
        app:contentPadding="@dimen/zero"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_avatar" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        app:cardCornerRadius="@dimen/fragment_home_card_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/fragment_home_card_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classes_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_background">

            <TextView
                android:id="@+id/card_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/are_your_ready"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_home_card_title_text_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/day_first"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fragment_home_digit_height"
                android:layout_marginStart="@dimen/fragment_home_digit_margin_start"
                android:layout_marginEnd="@dimen/fragment_home_digit_margin_end"
                android:background="@drawable/text_view_rounded_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_home_digit_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toStartOf="@id/day_second"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/day_second"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fragment_home_digit_height"
                android:layout_marginHorizontal="@dimen/fragment_home_digit_margin_end"
                android:background="@drawable/text_view_rounded_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_home_digit_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toStartOf="@id/separator_first"
                app:layout_constraintStart_toEndOf="@id/day_first"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/separator_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_home_digit_margin_end"
                android:gravity="center"
                android:text="@string/separator_char"
                android:textColor="@color/white"
                android:textSize="@dimen/separator_char_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toStartOf="@id/hour_first"
                app:layout_constraintStart_toEndOf="@id/day_second"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/hour_first"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fragment_home_digit_height"
                android:layout_marginHorizontal="@dimen/fragment_home_digit_margin_end"
                android:background="@drawable/text_view_rounded_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_home_digit_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toStartOf="@id/hour_second"
                app:layout_constraintStart_toEndOf="@id/separator_first"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/hour_second"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fragment_home_digit_height"
                android:layout_marginHorizontal="@dimen/fragment_home_digit_margin_end"
                android:background="@drawable/text_view_rounded_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_home_digit_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toStartOf="@id/separator_second"
                app:layout_constraintStart_toEndOf="@id/hour_first"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/separator_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/fragment_home_digit_margin_end"
                android:gravity="center"
                android:text="@string/separator_char"
                android:textColor="@color/white"
                android:textSize="@dimen/separator_char_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toStartOf="@id/minute_first"
                app:layout_constraintStart_toEndOf="@id/hour_second"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/minute_first"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fragment_home_digit_height"
                android:layout_marginHorizontal="@dimen/fragment_home_digit_margin_end"
                android:background="@drawable/text_view_rounded_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_home_digit_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toStartOf="@id/minute_second"
                app:layout_constraintStart_toEndOf="@id/separator_second"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/minute_second"
                android:layout_width="@dimen/zero"
                android:layout_height="@dimen/fragment_home_digit_height"
                android:layout_marginStart="@dimen/fragment_home_digit_margin_end"
                android:layout_marginEnd="@dimen/fragment_home_digit_margin_start"
                android:background="@drawable/text_view_rounded_background"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="@dimen/fragment_home_digit_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/card_minute"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/minute_first"
                app:layout_constraintTop_toBottomOf="@id/card_title" />

            <TextView
                android:id="@+id/card_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:text="@string/days"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/day_second"
                app:layout_constraintStart_toStartOf="@id/day_first" />

            <TextView
                android:id="@+id/card_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:text="@string/hours"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/hour_second"
                app:layout_constraintStart_toStartOf="@id/hour_first" />

            <TextView
                android:id="@+id/card_minute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_default"
                android:text="@string/minutes"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/minute_second"
                app:layout_constraintStart_toStartOf="@id/minute_first" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:id="@+id/classes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/fragment_home_title_margin_vertical"
        android:text="@string/lesson"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_main_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <TextView
        android:id="@+id/count_lesson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/classes_lesson_drawable_padding"
        android:text="@string/lesson_count"
        android:textColor="#8E8D8D"
        android:textSize="@dimen/fragment_main_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_classes"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_margin="@dimen/margin_default"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="@dimen/fragment_home_rv_classes_height_percent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/classes"
        tools:listitem="@layout/lesson_item" />

    <TextView
        android:id="@+id/homework"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/classes_lesson_drawable_padding"
        android:text="@string/home_work"
        android:textColor="@color/white"
        android:textSize="@dimen/fragment_main_title_text_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rv_classes" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_homework"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/zero"
        android:layout_marginHorizontal="@dimen/margin_default"
        android:layout_marginVertical="@dimen/margin_default"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/homework"
        tools:listitem="@layout/home_work_item" />

</androidx.constraintlayout.widget.ConstraintLayout>